--- a/package.json
+++ b/package.json
@@ -25,11 +25,21 @@
   },
 
   "dependencies": {
-    "express": "~3.4.4"
+    "angular-route": "^1.4.8",
+    "async": "1.5.0",
+    "body-parser": "~1.0.0",
+    "cookie-parser": "~1.0.1",
+    "debug": "~0.7.4",
+    "ejs": "~0.8.5",
+    "express": "~4.0.0",
+    "mongodb": "2.0.49",
+    "morgan": "~1.0.0",
+    "request": "^2.67.0",
+    "static-favicon": "~1.0.0"
   },
   "devDependencies": {},
   "bundleDependencies": [],
 
   "private": true,
-  "main": "server.js"
+  "main": "app.js"
 }
